unpackaged/main/default/objects/Single_Barrel_Stave_Setting__mdt/Single_Barrel_Stave_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used in the Single Barrel Program visual flow to display the names and images for each stave for a particular brand</description>
    <label>Single Barrel Stave Setting</label>
    <pluralLabel>Single Barrel Stave Settings</pluralLabel>
</CustomObject>