unpackaged/main/default/objects/Single_Barrel_Stave_Setting__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Makers Mark</fullName>
                <default>true</default>
                <label>Makers Mark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>