unpackaged/main/default/objects/Single_Barrel_Stave_Setting__mdt/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>