unpackaged/main/default/objects/Single_Barrel_Stave_Setting__mdt/fields/Stave_Name__c.field-meta.xml
<CustomField>
    <fullName>Stave_Name__c</fullName>
    <label>Stave Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>